tests/ui/ignore.stderr
error: Ignore is not valid at the container level
 --> $DIR/ignore.rs:5:12
  |
5 | #[designal(ignore)]
  |            ^^^^^^

error: You should only ignore once
  --> $DIR/ignore.rs:12:16
   |
12 |     #[designal(ignore)]
   |                ^^^^^^

error: You are ignoring designal on this field, but have added other attributes
  --> $DIR/ignore.rs:18:16
   |
18 |     #[designal(ignore)]
   |                ^^^^^^

error: You are ignoring designal on this field, but have added other attributes
  --> $DIR/ignore.rs:26:16
   |
26 |     #[designal(ignore)]
   |                ^^^^^^

error: You are ignoring designal on this field, but have added other attributes
  --> $DIR/ignore.rs:34:16
   |
34 |     #[designal(ignore)]
   |                ^^^^^^

error: You are ignoring designal on this field, but have added other attributes
  --> $DIR/ignore.rs:42:16
   |
42 |     #[designal(ignore)]
   |                ^^^^^^
